--- a/CppEmbeddedHeaderGenerator.csproj
+++ b/CppEmbeddedHeaderGenerator.csproj
@@ -34,6 +34,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="CommandLineParser" Version="2.8.0" />
     <PackageReference Include="GitignoreParserNet" Version="0.2.0.9" />
   </ItemGroup>
 
