--- a/CppEmbeddedHeaderGenerator.csproj
+++ b/CppEmbeddedHeaderGenerator.csproj
@@ -13,6 +13,7 @@
     <PackageProjectUrl>https://github.com/Guiorgy/CppEmbeddedHeaderGenerator</PackageProjectUrl>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <RepositoryUrl>https://github.com/Guiorgy/CppEmbeddedHeaderGenerator</RepositoryUrl>
+    <ApplicationIcon>CppEmbeddedHeaderGenerator.ico</ApplicationIcon>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -29,6 +30,10 @@
     <None Remove="Output\**" />
     <None Remove="SampleConsoleApplication\**" />
     <None Remove="Tests\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="CppEmbeddedHeaderGenerator.ico" />
   </ItemGroup>
 
   <ItemGroup>
