--- a/CppEmbeddedHeaderGenerator.csproj
+++ b/CppEmbeddedHeaderGenerator.csproj
@@ -14,6 +14,7 @@
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <RepositoryUrl>https://github.com/Guiorgy/CppEmbeddedHeaderGenerator</RepositoryUrl>
     <ApplicationIcon>CppEmbeddedHeaderGenerator.ico</ApplicationIcon>
+    <Version>1.1.0</Version>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
