--- a/Tests/SampleConsoleApplication/SampleConsoleApplication.vcxproj.filters
+++ b/Tests/SampleConsoleApplication/SampleConsoleApplication.vcxproj.filters
@@ -20,10 +20,10 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\Output\embedded.h">
+    <ClInclude Include="..\..\Output\embedded.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\Output\embedded-extractor.h">
+    <ClInclude Include="..\..\Output\embedded-extractor.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
